# tox-lsr

./: .gitignore  .travis.yml  AUTHORS.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox-requirements.txt  tox.ini  travis-requirements.txt
.github/workflows/: tox-py36.yml  tox.yml
containers/: Dockerfile
src/tox_lsr/: __init__.py  hooks.py  hooks3.py  hooks4.py  utils.py  version.py
src/tox_lsr/config_files/: ansible-lint.yml  black.toml  collection_yamllint.yml  flake8.ini  pylintrc  tox-default.ini  woke.yml  yamllint.yml
src/tox_lsr/osbuild-manifests/: Makefile
src/tox_lsr/osbuild-manifests/distro/: cs10.ipp.yml  cs8.ipp.yml  cs9.ipp.yml  f37.ipp.yml  f38.ipp.yml  f39.ipp.yml  f40.ipp.yml
src/tox_lsr/osbuild-manifests/images/: lsr.mpp.yml
src/tox_lsr/osbuild-manifests/include/: arch-x86_64.ipp.yml  build.ipp.yml  computed-vars.ipp.yml  defaults.ipp.yml  image-ostree.ipp.yml  image-regular.ipp.yml  image.ipp.yml  target-qemu.ipp.yml
src/tox_lsr/osbuild-manifests/osbuildvm/: osbuildvm  osbuildvm.mpp.yml
src/tox_lsr/osbuild-manifests/tools/: runosbuild
src/tox_lsr/test_scripts/: ansible-lint-helper.sh  bootc-buildah-qcow.sh  build_ostree_image.sh  check-ansible-managed.sh  check_meta_versions.py  custom_coveralls.py  custom_pylint.py  install-collection.sh  lsr_ci_preinstall  lsr_ci_runtox  lsr_travis_preinstall  lsr_travis_runtox  runansible-doc.sh  runansible-test.sh  runcodeql.sh  runcollection.sh  runcommitlint.sh  runcontainer.sh  runcoveralls.sh  runpylint.sh  runqemu.py  runshellcheck.sh  runsyspycmd.sh  runwoke.sh  setup_module_utils.sh  standard-inventory-qcow2  utils.sh  vault-sudo-askpass.sh
stubs/pkg_resources/: __init__.pyi
stubs/pluggy/: __init__.pyi
stubs/tox/: __init__.pyi
stubs/tox/config/: __init__.pyi
stubs/tox/config/loader/: __init__.pyi
stubs/tox/config/loader/ini/: __init__.pyi
stubs/tox/config/source/: __init__.pyi
stubs/tox/plugin/: __init__.pyi
stubs/tox/session/: __init__.pyi
stubs/tox/version/: __init__.pyi
tests/fixtures/test_tox_merge_ini/: result.ini  tox.ini
tests/unit/: __init__.py  conftest.py  test_hooks.py  test_hooks3.py  test_hooks4.py  test_utils.py  test_version.py  utils.py
