# SPDX-License-Identifier: MIT

[metadata]
name = tox-lsr
version = attr: tox_lsr.version.__version__
url = https://github.com/linux-system-roles/tox-lsr
project_urls =
    Bug Reports = https://github.com/linux-system-roles/tox-lsr/issues
    Source = https://github.com/linux-system-roles/tox-lsr
author = Linux System Roles Team
author_email = systemroles@lists.fedorahosted.org
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: Plugins
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing
license = MIT
license_file = LICENSE
description = A tox plugin for testing Linux system roles
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    plugin
    tox
    testing
platforms =
    linux

[options]
zip_safe = False
setup_requires =
    setuptools >=40.9.0
install_requires =
    tox<4
python_requires = >=2.6, <4
#include_package_data = True
packages = find:
package_dir =
    = src

[options.extras_require]
dev =
    check-manifest
test =
    coverage

[options.entry_points]
tox =
    lsr = tox_lsr.hooks

[options.packages.find]
where = src

[bdist_wheel]
universal = True

[check]
metadata = True
strict = True

[sdist]
formats = zip, gztar

[flake8]
filename = *.py,*.pyi
ignore = E302,E704,H216,H301,H304,H306,H404,H405,W503
select = E,F,W,C,G,H
enable-extensions = G,H
max-line-length = 79
max-doc-length = 79
show-source = True
statistics = True
doctests = True
max-complexity = 15
exclude = .git,.tox,.github,__pycache__

[mypy]
mypy_path = stubs
disallow_any_expr = True
disallow_any_decorated = True
disallow_any_explicit = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True
strict_equality = True
warn_incomplete_stub = True
warn_unused_configs = True

[pydocstyle]
match = .*\.py[i]?
ignore = D202
